--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Page title and fav icon -->
+    <!-- Page title and Fav Icon -->
     <title>Waifus VS Shadowmanes</title>
     <link rel="shortcut icon" href="" type="image/x-icon">
 
